--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor-community/keep-awake": "^7.1.0",
     "@capacitor/android": "^8.0.0",
     "@capacitor/core": "^8.0.0",
-    "@capacitor/motion": "^8.0.0"
+    "@capacitor/motion": "^8.0.0",
+    "@capacitor/preferences": "^8.0.0"
   }
 }
